--- a/apropos.html
+++ b/apropos.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
   <head>
     <link rel="shortcut icon" href="../Images/branche.ico" type="image/x-icon"/>
-    <link href="../Styles/style.css" rel="stylesheet" type="text/css"/>
+    <link href="style.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>A l'écoute des objets</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Cinzel" type="text/css"/>
@@ -21,8 +21,6 @@
 
       <li><a href="ateliers.html">ateliers</a></li>
 
-      <li><a href="CV_Eric_Mersch.pdf">cv</a></li>
-
       <li><a href="contact.html">contact</a></li>
     </ul>
   </div>
@@ -30,7 +28,7 @@
   <div class="apropos">
   
   <div class="container">
-  <img src="../Images/stevenI.jpg" alt="Avatar" class="image"/>
+  <img src="stevenI.jpg" alt="Avatar" class="image"/>
   <div class="overlay">
     <div class="text-large"><p style="font-weight: lighter;">Je me passionne pour la création d’objets sonores et l’improvisation musicale. Quand je crée un objet sonore, j’utilise de préférence des matériaux de récupération, organiques ou industriels que je trouve dans mon environnement. J'ajoute parfois un peu d'électronique ou du code informatique. Puis je tisse des liens avec les objets que je construis.</p>
 
