--- a/ateliers.html
+++ b/ateliers.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
   <head>
     <link rel="shortcut icon" href="../Images/branche.ico" type="image/x-icon"/>
-    <link href="../Styles/style.css" rel="stylesheet" type="text/css"/>
+    <link href="style.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>A l'écoute des objets</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Cinzel" type="text/css"/>
@@ -30,7 +30,7 @@
   <div class="objets">
 
 <div class="container">
-  <img src="../Images/electrostoemp.jpg" alt="Avatar" class="image"/>
+  <img src="electrostoemp.jpg" alt="Avatar" class="image"/>
   <div class="overlay">
     <div class="text-ateliers">Quelques composants électroniques en vrac, un peu de code informatique, une pincée d’imagination et de curiosité, c’est la recette pour cet ateliers d’exploration sonore. Créer un beat à partir des battements de ton cœur, contrôler un synthétiseur à partir du clignotement d’une lampe de vélo, générer du son à partir de ton souffle ou des mouvements de ton corps, ce sont là quelques possibilités de ce que tu pourras faire au cours de ces trois soirées.
 </div>
@@ -38,7 +38,7 @@
 </div>
 
 <div class="container">
-  <img src="../Images/atelier_objets.jpg" alt="Avatar" class="image"/>
+  <img src="atelier_objets.jpg" alt="Avatar" class="image"/>
   <div class="overlay">
     <div class="text-ateliers">En première partie de cet événement, vous découvrirez une création sonore improvisée à partir d’objets abandonnés, minéraux, organiques ou industriels, comme une invitation à prêter l’oreille aux quatre éléments de la nature. Un moulin à café évoque les craquements de la terre, une kalimba faite avec des cuillères jetables raconte une forêt sous la pluie, le grondement du tonnerre résonne dans une boîte à thé, le vent fait trembler les feuilles d’un arbre. En deuxième partie, vous pourrez à votre tour manipuler les objets, et peindre collectivement un tableau sonore improvisé. Pas besoin d’être musicien.
 </div>
