--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
   <head>
     <link rel="shortcut icon" href="../Images/branche.ico" type="image/x-icon"/>
-    <link href="../Styles/style.css" rel="stylesheet" type="text/css"/>
+    <link href="style.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>A l'écoute des objets</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Cinzel" type="text/css"/>
