--- a/objets.html
+++ b/objets.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
   <head>
     <link rel="shortcut icon" href="../Images/branche.ico" type="image/x-icon"/>
-    <link href="../Styles/style.css" rel="stylesheet" type="text/css"/>
+    <link href="style.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>A l'écoute des objets</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Cinzel" type="text/css"/>
@@ -30,28 +30,28 @@
   <div class="objets">
 
 <div class="container">
-  <img src="../Images/kalimba.JPG" alt="Avatar" class="image"/>
+  <img src="kalimba_p.jpg" alt="Avatar" class="image"/>
   <div class="overlay">
     <div class="text">Cet instrument a été conçu en grande partie à partir de matériaux trouvés dans les rues de Bruxelles: une boîte de bonbons de la rue au beurre, un tube de métal non identifié, de vieux clous, des cuillère à café « jetables », le tout a été assemblé avec peu de moyens techniques. Amplifié, il a un son chaleureux, humide et boisé qui peut évoquer un décors de forêt tropicale à la saison des pluies.</div>
   </div>
 </div>
 
 <div class="container">
-  <img src="../Images/horloge.JPG" class="image"/>
+  <img src="horloge_p.JPG" class="image"/>
   <div class="overlay">
     <div class="text">Qui a dit que les objets n’avaient pas de cœur? Le tic tac de cette horloge est amplifié et traité par un dispositif électronique. Il évoque un battement de cœur, lent et apaisant, qui nous rappelle peut-être des sensations que nous avions dans le ventre de notre mère… Avec Aline Yasmin.</div>
   </div>
 </div>
 
 <div class="container">
-  <img src="../Images/drone.JPG" class="image"/>
+  <img src="drone_p.jpg" class="image"/>
   <div class="overlay">
     <div class="text">Une création dépasse pafois les intentions de son créateur. C'est objet a autonomie qui m’impose le respect. Avec une seule corde et aucune frète, il s’apparente à l’arc à bouche et nous relie à nos ancêtres chasseurs-cueilleurs et les rites qu’ils pouvaient célébrer, dont nous héritons sans nous en rendre compte. A une époque ou l’obscurité se faire rare et ou le spectacle de la lune et des étoiles nous échappe par trop de distractions, le son que cet instrument produit évoque le mystère du cosmos et celui de notre existence.</div>
   </div>
 </div>
 
 <div class="container">
-  <img src="../Images/balancoire.jpg" class="image"/>
+  <img src="balancoire.jpg" class="image"/>
   <div class="overlay">
     <div class="text">En se Balançant sous cet arbre, vous entendez une mélodie dont chaque note est produite par vos mouvements. Avec Why Elliy, souvenir du confinement à Weimar.</div>
   </div>
@@ -59,21 +59,21 @@
     </div>
 
 <div class="container">
-  <img src="../Images/ombre_et_onde.jpg" class="image"/>
+  <img src="ombre_et_onde.jpg" class="image"/>
   <div class="overlay">
     <div class="text">Ces bulles de savons s’accompagnent dans leur envol d’un arpège mystérieux . Penseriez-vous que la formule de cette magie tient dans un code informatique? Avec Janet Avanessian.</div>
   </div>
     </div>
 
 <div class="container">
-  <img src="../Images/boiteamusique.jpg" class="image"/>
+  <img src="boiteamusique_p.jpg" class="image"/>
   <div class="overlay">
     <div class="text">J'aime l'imprécision rythmique de la mélodie qui sort de cette boite à musique lorsqu'une partition de papier glisse dans ses mécanismes.</div>
   </div>
     </div>
 
 <div class="container">
-  <img src="../Images/branche.JPG" class="image"/>
+  <img src="branche_p.JPG" class="image"/>
   <div class="overlay">
     <div class="text">Une vielle branche qui se porte sur l'épaule, comme un violon mais elle est plutôt incontrôlable et rappelle les solos de Jimi Hendrix.</div>
   </div>
@@ -81,14 +81,14 @@
 
 
 <div class="container">
-  <img src="../Images/escargots_BW.jpg" class="image"/>
+  <img src="escargots_BW.jpg" class="image"/>
   <div class="overlay">
     <div class="text">Un peu d'électronique, quelques gouttes d'eau et c'est la saison des amours pour ces deux êtres à un pied. De la musique est produite par leurs contacts langoureux.</div>
   </div>
     </div>
 
 <div class="container">
-  <img src="../Images/hector.JPG" class="image"/>
+  <img src="hector_p.jpg" class="image"/>
   <div class="overlay">
     <div class="text">Hector est un petit robot très spontané qui aime chanter la techno. Il réagit à la lumière et quand on le touche.
 </div>
@@ -96,7 +96,7 @@
     </div>
 
 <div class="container">
-  <img src="../Images/reflections.jpg" class="image"/>
+  <img src="reflections.jpg" class="image"/>
   <div class="overlay">
     <div class="text">Je suis toujours émerveillé quand je vois les reflets du soleil sur une rivière. Dans cette installation interactive, vous pouvez agiter la surface de l'eau et admirer les reflets des vagues tandis que des sons sont générés au passage de celles-ci.</div>
   </div>
