--- a/objets.html
+++ b/objets.html
@@ -37,7 +37,7 @@
 </div>
 
 <div class="container">
-  <img src="horloge_p.JPG" class="image"/>
+  <img src="horloge_p.jpg" class="image"/>
   <div class="overlay">
     <div class="text">Qui a dit que les objets n’avaient pas de cœur? Le tic tac de cette horloge est amplifié et traité par un dispositif électronique. Il évoque un battement de cœur, lent et apaisant, qui nous rappelle peut-être des sensations que nous avions dans le ventre de notre mère… Avec Aline Yasmin.</div>
   </div>
@@ -73,7 +73,7 @@
     </div>
 
 <div class="container">
-  <img src="branche_p.JPG" class="image"/>
+  <img src="branche_p.jpg" class="image"/>
   <div class="overlay">
     <div class="text">Une vielle branche qui se porte sur l'épaule, comme un violon mais elle est plutôt incontrôlable et rappelle les solos de Jimi Hendrix.</div>
   </div>
