--- a/media.html
+++ b/media.html
@@ -31,9 +31,10 @@
     <!--iframe width="100%" height="60%" src="https://www.youtube.com/embed/e3DRPCmtRio?autoplay=1?controls=0">
 </iframe-->
 
-<video controls width="100%" autostart="1">
-    <source src="https://youtu.be/e3DRPCmtRio" type="video/mp4">
-</video>
+    
+<iframe width="420" height="315"
+src="https://www.youtube.com/embed/e3DRPCmtRio?controls=0">
+</iframe>
     
   </div>
 </body>
