--- a/media.html
+++ b/media.html
@@ -32,8 +32,8 @@
 </iframe-->
 
     
-<iframe width="420" height="315"
-src="https://www.youtube.com/embed/e3DRPCmtRio?controls=0">
+<iframe width="100%" height="60%"
+src="https://www.youtube.com/embed/e3DRPCmtRio?autoplay=1?controls=0">
 </iframe>
     
   </div>
