--- a/apropos.html
+++ b/apropos.html
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
   <head>
-    <link rel="shortcut icon" href="../Images/branche.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="branche.ico" type="image/x-icon"/>
     <link href="style.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>A l'écoute des objets</title>
