--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,8 @@
                                 
 		<p>Un commentaire, une question ou une proposition?</p>
       <form action="mailto:eric.m.mersch@gmail.com" method="get" enctype="text/plain">
-      <p>Nom: <br/><input type="text" name="name" /></p>
-      <p>Votre E-mail:<br/><input type="text" name="email" /></p>
+      <p>Votre nom: <br/><input type="text" name="name" /></p>
+      <p>Votre adresse e-mail:<br/><input type="text" name="email" /></p>
       <p>
         Votre message:
         <br />
