--- a/apropos.html
+++ b/apropos.html
@@ -25,7 +25,7 @@
     </ul>
   </div>
 
-  <div class="apropos">
+  <div class="objets">
   
   <div class="container">
   <img src="stevenI.jpg" alt="Avatar" class="image"/>
