--- a/ateliers.html
+++ b/ateliers.html
@@ -11,7 +11,7 @@
   <body>
   <div class="menu">
     <ul>
-      <li><a href="home.html">home</a></li>
+      <li><a href="index.html">home</a></li>
 
       <li><a href="apropos.html">à propos</a></li>
 
@@ -45,5 +45,12 @@
   </div>
 </div>
 
+<div class="container">
+  <img src="orga-noize.jpg" alt="Avatar" class="image"/>
+  <div class="overlay">
+    <div class="text-ateliers">Dans la première partie de cet événement on va souder quelques composants électroniques et assembler des objets de récupération et des matériaux organiques pour créer des objets sonores originaux à l'esthétique organique-industrielle. Ensuite, on va s'amuser à jouer avec nos instruments dans l'espace public et composer avec le son, le silence, les rythmes et polyrythmes. Ambiance assurée!
+</div>
+  </div>
+</div>
 
 </div></body></html>
