--- a/projets.html
+++ b/projets.html
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
   <head>
-    <link rel="shortcut icon" href="../Images/branche.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="branche.ico" type="image/x-icon"/>
     <link href="../Styles/style.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>A l'écoute des objets</title>
@@ -30,7 +30,7 @@
   <div class="objets">
 
 <div class="container">
-  <img src="../Images/defile.jpg" alt="Avatar" class="image"/>
+  <img src="defile.jpg" alt="Avatar" class="image"/>
   <div class="overlay">
     <div class="text">2018. Loop Theory. Collaboration avec Why Elliy sur une performance alliant mode, chorégraphie, musique générative et arts numériques dans le cadre de l'appel Creart'Up au "Point Ephémère" et "Les Cannaux", avec le soutien de la mairie de Paris.
 </div>
@@ -39,7 +39,7 @@
 
 
 <div class="container">
-  <img src="../Images/eigengrau.jpg" alt="Avatar" class="image"/>
+  <img src="eigengrau.jpg" alt="Avatar" class="image"/>
   <div class="overlay">
     <div class="text">2019-2020. Eigengrau. Avec Janet Avanessian, Xavier Dellicourt, Muriel de Lodi, Blanca Prieto. Performances musicales improvisées dans l'obscurité.
 </div>
@@ -48,7 +48,7 @@
 
 
 <div class="container">
-  <img src="../Images/stevenIII.jpg" alt="Avatar" class="image"/>
+  <img src="stevenIII.jpg" alt="Avatar" class="image"/>
   <div class="overlay">
     <div class="text">2020-2021. Ombre et Onde. Collaboration avec Janet Avanessian sur des ateliers et des performance autour du théâtre d'ombres et de son accompagnement sonore. Dans le cadre de l'appel "Un futur pour la Culture" chez Espirito Mundo et Pilar, avec le soutien de fédération Wallonie-Bruxelles. Photo de Steven Paters.
 </div>
@@ -57,7 +57,7 @@
 
 
 <div class="container">
-  <img src="../Images/IMG_6363-950x320.jpg" alt="Avatar" class="image"/>
+  <img src="IMG_6363-950x320.jpg" alt="Avatar" class="image"/>
   <div class="overlay">
     <div class="text">2021. A propos des non-dits. Collaboration avec Aline Yasmin et Alex Cepile sur une exposition à Espirito Mundo. Photo de Alex Cepile.
 </div>
@@ -66,7 +66,7 @@
 
 
 <div class="container">
-  <img src="../Images/georgette.jpg" alt="Avatar" class="image"/>
+  <img src="georgette.jpg" alt="Avatar" class="image"/>
   <div class="overlay">
     <div class="text">2020-2023. Georgette. Avec Anne Wezel, Blanca Prieto, Charles François, Florence Borgers et Natacha Save. Georgette est une quête d’alchimie libertaire, Georgette est un orchestre sans chef, qui cherche à écouter et à se connecter à son environnement direct dans l'instant présent. Le résultat sonore n'est pas une intention mais il invite au voyage intérieur.
 </div>
