--- a/media.html
+++ b/media.html
@@ -20,7 +20,8 @@
       <li><a href="media.html">media</a></li>
 
       <li><a href="ateliers.html">ateliers</a></li>
-
+      
+      <li><a href="projets.html">projets</a></li>
 
       <li><a href="contact.html">contact</a></li>
     </ul>
