--- a/media.html
+++ b/media.html
@@ -33,7 +33,7 @@
 </iframe-->
 
     
-<iframe width="100%" height="100%"
+<iframe frameborder=0 width="100%" height="100%"
 src="https://www.youtube.com/embed/e3DRPCmtRio?autoplay=1?controls=0">
 </iframe>
     
