--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 	<div class="form-horizontal">
 
         <p>Un commentaire, une question ou une proposition?</p>
-        <a href="mailto:eric.m.mersch@gmail.com" "text-color=white">eric.m.mersch@gmail.com</a>	
+        <a href="mailto:eric.m.mersch@gmail.com" style="color: white">eric.m.mersch@gmail.com</a>	
 	</div>
 </body>
 </html>
