--- a/objets.html
+++ b/objets.html
@@ -48,7 +48,7 @@
 <div class="container">
   <img src="drone_p.jpg" class="image"/>
   <div class="overlay">
-    <div class="text">Une création dépasse pafois les intentions de son créateur. C'est objet a autonomie qui m’impose le respect. Avec une seule corde et aucune frète, il s’apparente à l’arc à bouche et nous relie à nos ancêtres chasseurs-cueilleurs et les rites qu’ils pouvaient célébrer, dont nous héritons sans nous en rendre compte. A une époque ou l’obscurité se faire rare et ou le spectacle de la lune et des étoiles nous échappe par trop de distractions, le son que cet instrument produit évoque le mystère du cosmos et celui de notre existence.</div>
+    <div class="text">Cet objet a autonomie qui m’impose le respect. Avec une seule corde et aucune frète, il s’apparente à l’arc à bouche et nous relie à nos ancêtres chasseurs-cueilleurs et les rites qu’ils pouvaient célébrer, dont nous héritons sans nous en rendre compte. A une époque ou l’obscurité se faire rare et ou le spectacle de la lune et des étoiles nous échappe par trop de distractions, le son que cet instrument produit évoque le mystère du cosmos et celui de notre existence.</div>
   </div>
 </div>
 
