--- a/contact.html
+++ b/contact.html
@@ -32,5 +32,11 @@
         <p>Un commentaire, une question ou une proposition?</p>
         <a href="mailto:eric.m.mersch@gmail.com" style="color: white">eric.m.mersch@gmail.com</a>	
 	</div>
+	<div>
+        <p>
+        <a href="https://www.instagram.com/alecoutedesobjets/"><img src="ig.png" alt="Avatar" class="social"/></a>
+        <a href="https://www.facebook.com/profile.php?id=100078101635250"><img src="fb.png" alt="Avatar" class="social"/></a>
+        </p>
+	</div>
 </body>
 </html>
