--- a/contact.html
+++ b/contact.html
@@ -38,5 +38,6 @@
         <a href="https://www.facebook.com/profile.php?id=100078101635250"><img src="fb.png" alt="Avatar" class="social"/></a>
         </p>
 	</div>
+  </div>
 </body>
 </html>
