--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
 	</div>
  	<div>
         <p>
-        <a href="https://www.instagram.com/alecoutedesobjets/"><img src="../Images/ig.png" alt="Avatar" class="social"/></a>
-        <a href="https://www.facebook.com/profile.php?id=100078101635250"><img src="../Images/fb.png" alt="Avatar" class="social"/></a>
+        <a href="https://www.instagram.com/alecoutedesobjets/"><img src="ig.png" alt="Avatar" class="social"/></a>
+        <a href="https://www.facebook.com/profile.php?id=100078101635250"><img src="fb.png" alt="Avatar" class="social"/></a>
         </p>
 	</div>
 	</div>
