--- a/apropos.html
+++ b/apropos.html
@@ -32,11 +32,11 @@
   <div class="container">
   <img src="stevenI.jpg" alt="Avatar" class="image"/>
   <div class="overlay">
-    <div class="text-large"><p style="font-weight: lighter;">Je me passionne pour la création d’objets sonores et l’improvisation musicale. Quand je crée un objet sonore, j’utilise de préférence des matériaux de récupération, organiques ou industriels que je trouve dans mon environnement. J'ajoute parfois un peu d'électronique ou du code informatique. Puis je tisse des liens avec les objets que je construis.</p>
+    <div class="text-large"><p style="font-weight: lighter;">Né en 1984 et basé à Bruxelles, je me passionne pour la création d’objets sonores et l’improvisation musicale. Quand je crée un objet sonore, j’utilise de préférence des matériaux de récupération, organiques ou industriels que je trouve dans mon environnement. J'ajoute parfois un peu d'électronique ou du code informatique. Puis je tisse des liens avec les objets que je construis.</p>
 
       <p style="font-weight: lighter;">Je peux être fasciné par la résonance d’un couvercle de barbecue, me raconter l’histoire d’un vieux moulin à café, être en admiration face à l’harmonie présente dans les sons d’une forêt qui m’accueille. Mais je suis aussi parfois très désorienté par les musiques d’ambiance dans les supermarchés, celui des travaux, et tous ces sons que l’humain produit sans conscience du silence qu’il empêche de vivre.</p>
 
-      <p style="font-weight: lighter;">Que ce soit à travers des performances, des installations, ou des ateliers participatifs, le son et l’improvisation sont pour moi des moyen de permettre une écoute et une présence qualitative, une forme d’attention respectueuse et de participation consciente à cet orchestre de la vie, où chaque être et chaque chose a sa place, avec ses couleurs, ses failles et sa vulnérabilité.</p></div>
+      <p style="font-weight: lighter;">Que ce soit à travers des performances, des installations, ou des ateliers participatifs, le son et l’improvisation sont pour moi des moyens de permettre une écoute et une présence qualitative, une forme d’attention respectueuse et de participation consciente à cet orchestre de la vie, où chaque être et chaque chose a sa place, avec ses couleurs, ses failles et sa vulnérabilité.</p></div>
   </div>
 </div>
 
