--- a/projets.html
+++ b/projets.html
@@ -68,7 +68,7 @@
 <div class="container">
   <img src="georgette.jpg" alt="Avatar" class="image"/>
   <div class="overlay">
-    <div class="text">2020-2023. Georgette. Avec Anne Wezel, Blanca Prieto, Charles François, Florence Borgers et Natacha Save. Georgette est une quête d’alchimie libertaire, Georgette est un orchestre sans chef, qui cherche à écouter et à se connecter à son environnement direct dans l'instant présent. Le résultat sonore n'est pas une intention mais il invite au voyage intérieur.
+    <div class="text">2020-2024. Georgette. Avec Anne Wézel, Charles François, Florence Borgers et Natacha Save. Georgette est un collectif de musique improvisée qui veut s’adresser à un public varié, en âge, en origines socioculturelles, et en habitudes d’écoute. L’improvisation offre la possibilité de faire dialoguer des personnes ayant des pratiques artistiques différentes.
 </div>
   </div>
 </div>
