--- a/objets.html
+++ b/objets.html
@@ -32,6 +32,13 @@
   <div class="objets">
 
 <div class="container">
+  <img src="boiteaclous.jpg" alt="Avatar" class="image"/>
+  <div class="overlay">
+    <div class="text">J’aime beaucoup les boîtes, car elles rescellent du mystère. Cette boîte à clous est un instrument de musique électronique pour jouer des accords. Il est inspiré de l’auto-harpe et de sa version digitale, l’Omichord.</div>
+  </div>
+</div>
+    
+<div class="container">
   <img src="kalimba_p.jpg" alt="Avatar" class="image"/>
   <div class="overlay">
     <div class="text">Cet instrument a été conçu en grande partie à partir de matériaux trouvés dans les rues de Bruxelles: une boîte de bonbons de la rue au beurre, un tube de métal non identifié, de vieux clous, des cuillère à café « jetables », le tout a été assemblé avec peu de moyens techniques. Amplifié, il a un son chaleureux, humide et boisé qui peut évoquer un décors de forêt tropicale à la saison des pluies.</div>
