--- a/objets.html
+++ b/objets.html
@@ -32,6 +32,13 @@
   <div class="objets">
 
 <div class="container">
+  <img src="petitechose.jpg" alt="Avatar" class="image"/>
+  <div class="overlay">
+    <div class="text">Petite chose.</div>
+  </div>
+</div>
+    
+<div class="container">
   <img src="boiteaclous.jpg" alt="Avatar" class="image"/>
   <div class="overlay">
     <div class="text">J’aime beaucoup les boîtes, car elles rescellent du mystère. Cette boîte à clous est un instrument de musique électronique pour jouer des accords. Il est inspiré de l’auto-harpe et de sa version digitale, l’Omichord.</div>
