--- a/objets.html
+++ b/objets.html
@@ -34,7 +34,7 @@
 <div class="container">
   <img src="petitechose.jpg" alt="Avatar" class="image"/>
   <div class="overlay">
-    <div class="text">Petite chose.</div>
+    <div class="text">Petite chose. Cette sculpture est une boîte à musique primitive, elle nous rappelle notre potentiel d’apprécier chaque situation, de nous émerveiller d’un rien, de nous accommoder de ce qui est. </div>
   </div>
 </div>
     
