--- a/projets.html
+++ b/projets.html
@@ -68,9 +68,15 @@
 <div class="container">
   <img src="georgette.jpg" alt="Avatar" class="image"/>
   <div class="overlay">
-    <div class="text">2020-2024. Georgette. Avec Anne Wézel, Charles François, Florence Borgers et Natacha Save. Georgette est un collectif de musique improvisée qui veut s’adresser à un public varié, en âge, en origines socioculturelles, et en habitudes d’écoute. L’improvisation offre la possibilité de faire dialoguer des personnes ayant des pratiques artistiques différentes.
+    <div class="text">2020-. Georgette. Avec Anne Wézel, Charles François, Florence Borgers et Natacha Save. Georgette est un collectif de musique improvisée, orchestre sans chef, matière sonore primitive, jambe à paillettes.
 </div>
   </div>
+<div class="container">
+  <img src="nervures.jpg" alt="Avatar" class="image"/>
+  <div class="overlay">
+    <div class="text"> Nervures. Exposition collective, avec Ladislas Athiogbe, Pierre Duys, France Lamboray, Aurore Martignoni, Thierry Wieleman. Curation de Coryse Mwape. A La Vallée, Molenbeek. Octobre-Novembre 2024.</div>
+  </div>
+  
 </div>
 
 </div>
