--- a/projets.html
+++ b/projets.html
@@ -76,6 +76,7 @@
   <div class="overlay">
     <div class="text"> Nervures. Exposition collective, avec Ladislas Athiogbe, Pierre Duys, France Lamboray, Aurore Martignoni, Thierry Wieleman. Curation de Coryse Mwape. A La Vallée, Molenbeek. Octobre-Novembre 2024.</div>
   </div>
+  </div>
   
 </div>
 
