--- a/projets.html
+++ b/projets.html
@@ -71,6 +71,7 @@
     <div class="text">2020-. Georgette. Avec Anne Wézel, Charles François, Florence Borgers et Natacha Save. Georgette est un collectif de musique improvisée, orchestre sans chef, matière sonore primitive, jambe à paillettes.
 </div>
   </div>
+  </div>
 <div class="container">
   <img src="nervures.jpg" alt="Avatar" class="image"/>
   <div class="overlay">
