--- a/ateliers.html
+++ b/ateliers.html
@@ -55,4 +55,12 @@
   </div>
 </div>
 
+<div class="container">
+  <img src="leregardquitrace.jpg" alt="Avatar" class="image"/>
+  <div class="overlay">
+    <div class="text-ateliers">Cet atelier fait appel à de la soudure électronique et à de la petite menuiserie pour donner voix à un objet du quotidien. Nous utiliserons des micros de contact pour sonoriser des objets qui émettent peu de son naturellement. Ce type de micro permet d’amplifier des petites vibrations et agit un peu comme un stéthoscope, ou comme un objectif macro, permettant d’utiliser la texture d’objets pour générer des sons. Nous utiliserons des objets aussi divers et improbables que des fèves de haricot, un coupe-oeuf, une pomme de pin, un vieux jouet abandonné ou des objets apportés par les participants eux-mêmes. L’utilisation d’un effet d’écho permet d’enrichir ces sons qui seront amplifiés et joués au travers d’un petit haut-parleur de seconde main ou d’un haut-parleur fait lui-même à partir d’un objet. A l’issue de cet atelier, nous aurons exploré diverses techniques pour la création d’objets sonores, et chacun pourra repartir avec sa création.
+</div>
+  </div>
+</div>
+
 </div></body></html>
