--- a/ateliers.html
+++ b/ateliers.html
@@ -41,7 +41,7 @@
 <div class="container">
   <img src="atelier_objets.jpg" alt="Avatar" class="image"/>
   <div class="overlay">
-    <div class="text">En première partie de cet événement, vous découvrirez une création sonore improvisée à partir d’objets abandonnés, minéraux, organiques ou industriels, comme une invitation à prêter l’oreille aux quatre éléments de la nature. Un moulin à café évoque les craquements de la terre, une kalimba faite avec des cuillères jetables raconte une forêt sous la pluie, le grondement du tonnerre résonne dans une boîte à thé, le vent fait trembler les feuilles d’un arbre. En deuxième partie, vous pourrez à votre tour manipuler les objets, et peindre collectivement un tableau sonore improvisé. Pas besoin d’être musicien.</div>
+    <div class="text">En première partie de cet événement, vous découvrirez une création sonore improvisée à partir d’objets minéraux, organiques ou industriels, comme une invitation à prêter l’oreille aux quatre éléments de la nature. Un moulin à café évoque les craquements de la terre, une kalimba raconte une forêt sous la pluie, le vent fait trembler les feuilles d’un arbre. En deuxième partie, vous pourrez à votre tour manipuler les objets, et peindre collectivement un tableau sonore improvisé. Pas besoin d’être musicien.</div>
 </div>
   </div>
 
